dark mode admonitions code block ui and image radius fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -111,6 +111,10 @@ p code {
   border-radius: 4px;
   padding: 3px 6px;
 }
+.thumbnail img, img {
+  border-radius: 12px;
+}
+
 .alert {
   @apply !mb-5;
 }
@@ -180,6 +184,12 @@ p code {
 .theme-admonition-danger code, .alert--danger code {
   border: 1px solid #FBA5A6;
   background-color: #FECACB;
+}
+
+.alert a:hover {
+  text-decoration-thickness: 1px;
+  text-decoration-color: #00288E;
+  -webkit-text-decoration-color: #00288E;
 }
 
 a {
@@ -801,7 +811,7 @@ table thead tr th {
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 1rem;
+  border-radius: 12px;
 }
 
 .card-wrapper {
@@ -881,6 +891,10 @@ table thead tr th {
 /* Introduction page */
 
 /* Dark mode theme CSS */
+
+[data-theme='dark'] .main-wrapper {
+  background-color: var(--main-bg-color);
+}
 [data-theme='dark'] h6 {
   color: var(--secondary-blue-400);
 }
@@ -1027,6 +1041,10 @@ table thead tr th {
 [data-theme='dark'] .theme-admonition a, [data-theme='dark'] .alert a {
   color: #80A3FF;
 }
+
+[data-theme='dark'] .theme-admonition code, [data-theme='dark'] .alert code, [data-theme='dark'] .theme-admonition code span, [data-theme='dark'] .alert code span {
+  color: #1F2A37;
+}
 [data-theme='dark'] .theme-admonition-note, [data-theme='dark'] .alert--secondary {
   border: 1px solid #2D3956;
   background-color: #1E2538;
@@ -1076,6 +1094,11 @@ table thead tr th {
 [data-theme='dark'] .theme-admonition-danger code, [data-theme='dark'] .alert--danger code {
   border: 1px solid #FECACB;
   background-color: #FBA5A6;
+}
+
+[data-theme='dark'] .alert a:hover {
+  text-decoration-color: #80A3FF;
+  -webkit-text-decoration-color: #80A3FF;
 }
 
 [data-theme='dark'] table {
